[package]
name = "docker-compose-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
regex = "1.7.0"
serde_yaml = "0.9.21"
subprocess = "0.2.9"
tracing = "0.1.37"
