[package]
name = "docker-compose-runner"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/shotover/docker-compose-runner"
license = "Apache-2.0"
description = "A small helper for running `docker-compose.yaml` files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
regex = "1.7.0"
serde_yaml = "0.9.21"
subprocess = "1.0.0"
tracing = "0.1.37"

[dev-dependencies]
redis = "1.0.0"